syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jal.crawler.proto.link";

import "common_config.proto";
import "common_component.proto";



package grpc;

service RpcLinkConfig {
    rpc linkConfig (LinkConfig) returns (ConfigStatus);
    rpc linkConfigShow (ComponentStatus) returns (LinkConfig);
}


message LinkConfig {
    int32 thread = 1;
    MongoConfig mongo_config = 3;
    RedisConfig redis_config = 4;

    string self_host=7;
    int32 self_port=8;
    Status self_status=9;
    Status leader_status=10;
    string leader_host=11;
    int32 leader_port=12;

    int32 relation_type=15;


}

